--- a/getfive/assets/css/styles.css
+++ b/getfive/assets/css/styles.css
@@ -83,6 +83,28 @@ table.grandtotal td {
   height: 20px;
 }
 
+table.highscoretable {
+  background-color: transparent;
+  border-collapse: collapse;
+  border: solid 3px;
+  width: 100%;
+  padding: 100px
+}
+
+table.highscoretable tr, th {
+  border: 1px solid gray;
+  text-align: center;
+  padding: 10px;
+  font-size: 22px;
+}
+
+table.showeachrecord {
+  border: 1px solid gray;
+  text-align: center;
+  padding: 40px;
+  margin: 40px;
+}
+
 .button {
   background-color: white;
   color: black;
@@ -96,10 +118,14 @@ table.grandtotal td {
   cursor: pointer;
 }
 
+.roll:hover:enabled {
+  background-color: #2E76CF
+}
+
 .roll {
-  background-color: black;
+  background-color: #173b67;
   border: 3px;
-  border-color: blue;
+  border-color: lightsteelblue;
   color: yellow;
   padding: 15px 32px;
   text-align: center;
@@ -123,14 +149,20 @@ table.grandtotal td {
   background-color: transparent;
   text-align: center;
   width: 317px;
+  border: 1px;
+  padding: 0px;
   border: none;
   font-size: 28px;
   margin: 20px
 }
 
 #fb2 {
-  font-size: 21px;
-  margin: 20px;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  width: 317px;
+  font-size: 18px;
 }
 
 .highscores {
@@ -143,16 +175,19 @@ table.grandtotal td {
 
 .instructions {
   display: block;
-  margin: 20px;
+  margin-top: 80px;
+  margin-left: 20px;
+  margin-right: 20px;
   border: 3px solid gray;
   box-shadow: 0 6px 6px #ccc;
   padding: 20px;
-  background-color: lightsteelblue;
+  background-color: white;
 }
 
 .playfield {
   display: block;
-  margin: 20px;
+  margin-top: 80px;
+  margin-left: 20px;
   border: 3px solid gray;
   box-shadow: 0 6px 6px #ccc;
   padding: 20px;
@@ -161,4 +196,45 @@ table.grandtotal td {
 
 #dicedisplay {
   padding: 12px;
+}
+
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: #333;
+}
+
+li {
+  float: left;
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+li:hover {
+  color: yellow;
+}
+
+#mainmenu {
+  position: fixed;
+  width: 99%;
+  top: 1em;
+  margin-right: 1px;
+  margin-right: 1px;
+}
+
+#highscores {
+  display: block;
+  margin-top: 80px;
+  margin-left: 20px;
+  width: 1000px;
+  border: 3px solid gray;
+  box-shadow: 0 6px 6px #ccc;
+  padding: 20px;
+  background-color: white;
 }
