--- a/quote-generator/style.css
+++ b/quote-generator/style.css
@@ -83,6 +83,21 @@ button:active {
   font-size: 1.5rem;
 }
 
+/* Loader */
+.loader {
+  border: 10px solid gray;
+  border-top: 10px solid #333;
+  border-radius: 50%;
+  width: 60px;
+  height: 60px;
+  animation: spin 2s linear infinite;
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
+
 /* Media Query: Tablet or Smaller */
 /* Always have at bottom to override prior code */
 @media screen and (max-width: 1000px) {
